{
    "name": "InputAction",
    "maps": [
        {
            "name": "Player",
            "id": "20fb82db-e5a4-46b0-8224-895c05e91b07",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "7dc4add1-620b-45ff-a9b5-bce8b9454f98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "8be5808a-0b0a-44a4-8c7c-7520f86b7552",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "20151ff5-4bdf-4337-9f96-ffd9d4c75a00",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5821d3d-a17a-43fd-bb35-d3468d00c6a0",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}